update sonar, add env